tests/reference/asr-ichar_01-a5284c8.stderr
semantic error: Argument 1 to Ichar must have length 1
 --> tests/errors/ichar_01.f90:3:13
  |
3 |     print*, ichar("okay")
  |             ^^^^^^^^^^^^^ 
